# gh-spack-pr

./: .markdownlint.yaml  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  gh-spack-pr  pyproject.toml
.github/workflows/: prek.yml
cli/: README.md  check.py
cli/_vendor/pexpect/: pty_spawn.py
docs/: tutorial.md
spack_pr_review/: __init__.py  build.py  cli.py  diff_parser.py  domain.py  external.py  planner.py  reports.py  state.py
tests/: test_diff_planner_state.py
tools/gh-dash/: README.md
