[project]
name="gh-spack-pr"
description="Tools and GitHub CLI extension to build PRs for the spack package manager"
dependencies=[
  "pexpect",
  "ptyprocess",
]
dynamic = ["version"]


[project.scripts]
gh-spack-pr-review = "spack_pr_review.cli:main"


[project.optional-dependencies]
dev = [
  'black',
  "isort",
  "pylint",
  "pytest",
]


[tool.black]
line-length = 99
target-version = ['py312']


[tool.isort]
line_length = 99
profile = "black"
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "LOCALFOLDER",
]


[tool.codespell]
ignore-words-list = "THIRDPARTY"


[tool.mypy]
python_version = "3.12"
files = ['*.py', 'spack_pr_review']


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  "cli/_vendor"
]
line-length = 99
target-version = "py312"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = ["E402"]


[tool.pytest.ini_options]
testpaths = ['tests']

# -----------------------------------------------------------------------------
# Pylint - https://pylint.pycqa.org/en/latest/technical_reference/features.html
# -----------------------------------------------------------------------------
[tool.pylint.messages_control]
# These are safe to disable, fixing them is best done during a later code cleanup phases
disable = [
  "use-implicit-booleaness-not-comparison",
  "fixme"
]
# Maximum number of branch for function / method body.
# defaults to: max-branches=12
max-branches = 20

# Maximum number of lines in a module.
# defaults to: max-module-lines=1000
max-module-lines=2400

# Maximum number of locals for function / method body.
# defaults to: max-locals=15
max-locals = 24

max-returns = 8

# Maximum number of statements in function / method body.
# defaults to: max-statements=50
max-statements = 100

[tool.pyright]
verboseOutput = true
useLibraryCodeForTypes = true
reportMissingImports = true
reportWildcardImportFromLibrary = true
include = ['.']
ignore = ['']

[tool.pytype]
inputs = ["cli/check.py"]
exclude = ["cli/_vendor/**"]
